src/objects/ITOP_Device_Manufacturer__c.object
<CustomObject>
    <description>Maker/Manufacturer of a device supported by IT On Point</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter Device Manufacturer Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Device Manufacturer Icon/Logo</description>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>&apos;Which &apos;  +  Name + &apos; product do you require assistance with?&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <label>ITOP Device Manufacturer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP Device Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Device Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>